<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="18.0dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_purpose"
        android:textColor="@android:color/black"
        android:textSize="@dimen/f20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/select_purpose"
        android:textColor="@color/text3" />

    <Spinner
        android:id="@+id/spn_add_purpose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6.0dip"
        android:paddingBottom="6.0dip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_purpose_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.0dip"
        android:theme="@style/TextLabel">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.0dip"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_purpose_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_add_purpose_add"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>