<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:padding="12.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_current_status_a_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hungred_dollar"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/f14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x_char"
                        android:textColor="@color/white_text3"
                        android:textSize="@dimen/f14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_current_status_a_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/twelve"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/f14" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_current_status_a_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/five_hungred_dollars"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/f16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_current_status_a_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_34"
                    android:textColor="@color/white_text2"
                    android:textSize="@dimen/f12" />

                <TextView
                    android:id="@+id/txt_current_status_a_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/out_34"
                    android:textColor="@color/white_text2"
                    android:textSize="@dimen/f12" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="@color/grey" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/grey" />
</LinearLayout>