<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6.0dip"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2.0dip"
        app:cardElevation="2.0dip">

        <LinearLayout
            android:id="@+id/view_package_a_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="12.0dip"
            android:paddingTop="16.0dip"
            android:paddingRight="12.0dip"
            android:paddingBottom="16.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_package_a_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/plan"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txt_package_a_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_6_months"
                    android:textColor="@color/text2" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_package_a_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_example"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>